<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_today"
        android:icon="@mipmap/ic_home"
        android:title="@string/menu_today" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@mipmap/ic_grey_calendar"
        android:title="@string/menu_book" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@mipmap/ic_bell"
        android:title="@string/menu_activity" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@mipmap/ic_shopping_bag"
        android:title="@string/menu_shopping" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_user"
        android:title="@string/menu_profile" />

</menu>