<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_resident_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_resident_info"
            android:textAllCaps="true"
            android:theme="@style/subXxSmallMedBrandAccent" />

        <LinearLayout
            android:id="@+id/row_profile_image"
            style="@style/darkLightFlatBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_marginTop="@dimen/_16sdp">

            <com.paragon.utils.views.CircularImageView
                android:id="@+id/profile_image_view"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_16sdp" />

            <TextView
                android:id="@+id/label_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/label_add_photo"
                android:theme="@style/bodySmallSemiTitleBrandSecoundry" />

            <ImageView
                android:id="@+id/edit_btn"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_10sdp"
                android:src="@mipmap/ic_edit"
                app:tint="@color/gray_gray" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input"
            style="@style/darkLightFlatOutlinedBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/label_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="text|textVisiblePassword"
                android:singleLine="true"
                android:textAppearance="@style/bodySmallSemiTitleSystemWhite"
                android:textColor="@color/White"
                android:theme="@style/brandAccentEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/preferred_name_text_input"
            style="@style/darkLightFlatOutlinedBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/label_preferred_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_preferred_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="text|textVisiblePassword"
                android:singleLine="true"
                android:textColor="@color/White"
                android:textAppearance="@style/bodySmallSemiTitleSystemWhite"
                android:theme="@style/brandAccentEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/row_relation_to_owner"
            style="@style/darkLightFlatBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/edit_relation_to_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/label_relation_to_owner"
                android:theme="@style/bodySmallSemiTitleHintBrandSecoundry" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_birthday"
            style="@style/darkLightFlatBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/edit_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/label_birthday"
                android:theme="@style/bodySmallSemiTitleHintBrandSecoundry" />


        </LinearLayout>

        <include
            android:id="@+id/row_gender"
            layout="@layout/row_radio_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp" />

        <LinearLayout
            android:id="@+id/row_status"
            style="@style/darkLightFlatBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/edit_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/label_status"
                android:theme="@style/bodySmallSemiTitleHintBrandSecoundry" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_occupation"
            style="@style/darkLightFlatBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/edit_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/label_occupation"
                android:theme="@style/bodySmallSemiTitleHintBrandSecoundry" />


        </LinearLayout>

        <View
            android:id="@+id/divider"
            style="@style/systemBlackAlpha20"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_25sdp" />

    </LinearLayout>

</layout>