<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/row_contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_contact"
            android:textAppearance="@style/subXxSmallMedBrandAccent" />

        <LinearLayout
            android:id="@+id/row_mobile_no"
            style="@style/darkLightFlatBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flag_image_view"
                style="@style/bodyBaselineRegSystemBlack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_5sdp" />

            <TextView
                android:id="@+id/edit_country_code"
                style="@style/bodyBaselineRegSystemBlack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:drawableEnd="@mipmap/ic_drop_down"
                android:drawablePadding="@dimen/_10sdp"
                android:gravity="center" />

            <EditText
                android:id="@+id/edit_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/label_mobile"
                android:inputType="number"
                android:lines="1"
                android:maxLength="14"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textAppearance="@style/bodyBaselineRegSystemBlack"
                android:textColorHint="@color/system_black"
                android:theme="@style/brandAccentEditText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_email"
            style="@style/darkLightFlatBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:singleLine="true"
                android:textAppearance="@style/bodyBaselineRegSystemBlack"
                android:textColorHint="@color/system_black"
                android:theme="@style/brandAccentEditText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_alt_address"
            style="@style/darkLightFlatBorderRadius10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <EditText
                android:id="@+id/edit_alt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/label_alt_address"
                android:inputType="textVisiblePassword|text"
                android:textAppearance="@style/bodyBaselineRegSystemBlack"
                android:textColorHint="@color/system_black"
                android:theme="@style/brandAccentEditText" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            style="@style/systemBlackAlpha20"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_25sdp" />

    </LinearLayout>

</layout>