<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="registeredBottomVM"
            type="com.paragon.sensonic.ui.bottomsheets.GuestRegisteredBottomDialogFragment" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/systemWhiteRadius10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pinIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:alpha="0.1"
                android:background="@drawable/ic_bottom_sheet_pin" />

            <ImageView
                android:id="@+id/closeBTN"
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_34sdp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_15sdp"
                android:onClick="@{(view) -> registeredBottomVM.onCloseButtonClick()}"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_close_circle_white"
                app:tint="@color/gray_gray" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RelativeLayout
                android:id="@+id/imageRL"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_180sdp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_180sdp"
                    android:src="@mipmap/ic_circle_black_guest" />

                <com.paragon.utils.views.CircularImageView
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_alignParentEnd="true"
                    android:background="@mipmap/ic_check_on"
                    app:civ_border_color="@color/White"
                    app:civ_border_width="@dimen/_4sdp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/guestRegisterTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/label_guest_register"
                android:theme="@style/headlineH1SystemBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/label_sample_text2"
                android:theme="@style/bodyBaselineRegSystemBlackAlpha70" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/shareInviteLL"
                style="@style/brandAccent4Radius10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:onClick="@{(view) -> registeredBottomVM.onShareInviteClick()}">

                <TextView
                    android:id="@+id/shareInviteTV"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50sdp"
                    android:drawableStart="@mipmap/ic_share"
                    android:drawablePadding="@dimen/_11sdp"
                    android:gravity="center"
                    android:text="@string/label_share_invite"
                    android:theme="@style/bodyBaselineRegBrandAccent" />

            </LinearLayout>

            <TextView
                android:id="@+id/messageTV"
                style="@style/brandAccentGradientRadius100"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:onClick="@{(view) -> registeredBottomVM.onSendMessageClick()}"
                android:text="@string/label_send_message"
                android:textAppearance="@style/bodyBaselineSemiTitleSystemWhite" />

        </LinearLayout>
    </LinearLayout>
</layout>
